# RTMLCore

./: .gitignore  LICENSE  README.md  meh.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pypi-update.yml
files/: kan-input.txt  test.txt
rtml_core/: Document.py  Subtag.py  __init__.py
src/rtml_core/: Document.py  Tag.py  __init__.py  directory.py  document.py
tests/test_files/: perfect_file.txt
