[tool.poetry]
name = "rtml_core"
version = "0.2.1"
description = "Resource tagging markup language."
authors = ["DeadUnderscoreMeme <deadunderscorememe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
