[metadata]
name = RTMLCore
version = 0.0.6
author = DeadMeme
author_email = deadunderscorememe@gmail.com
description = For generating Resource Tag objects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DeadMeme5441/RTMLCore
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
include_package_data = True
